# pic-

./: .gitignore  PIC-IFE_GEC.sln  README.md  lzj_doc  readme
PIC-IFE_GEC/: CMakeLists.txt  InjectPositioning.f90  Norm_Error_0008.txt  Norm_Error_0016.txt  Norm_Error_0032.txt  Norm_Error_0064.txt  Norm_Error_0128.txt  Norm_Error_0256.txt  OUTPUT_velocity.f90  Output_Energy.f90  PIC-IFE_GEC.vfproj  ParticleDistribution.f90  ParticlePositioning.f90  README.md  build.sh  generate_Elementmap.f90  run_min_case.sh
PIC-IFE_GEC/INPUT/: IDG_inf.inp  IDG_inf_step_refine.inp  ife.inp  mesh.inp  object.inp  pic.inp
PIC-IFE_GEC/MCC_jw/code/: Main.F90  OneStep.F90
PIC-IFE_GEC/MCC_jw/data/: H2Vib_ndb_config  H2Vib_particle_config  H2Vib_property_config  bh_config  exlevel_config  gas_config  heat_config  heavy_heavy_config  lifetime_config  ndb_config  noH2Vib_ndb_config  noH2Vib_particle_config  noH2Vib_property_config  particle_config  property_config
PIC-IFE_GEC/MCC_jw/input/: 180000  180002  ar.txt  controlflow.txt  gas.txt
PIC-IFE_GEC/My Advisor Results - PIC-IFE_GEC/: annotations.advidb2
PIC-IFE_GEC/My Advisor Results - PIC-IFE_GEC/e000/: e000.advixeexp
PIC-IFE_GEC/OUTPUT/: normalize.inp  physics_parameter.inp
PIC-IFE_GEC/base/: ControlFlow.f90  ParticleBundle.f90  ParticleOne.f90
PIC-IFE_GEC/code/DSMC/: DSMC_Data_2D.f90  GAM.f90  Init_DSMC_2D.f90
PIC-IFE_GEC/code/Data/: Boundary.f90  Boundary_Data_2D.f90  Cell_Volume_Data.f90  Constant_Variable_2D.f90  Domain_2D.f90  Field_2D.f90  FluxLine_2D.f90  Gauss_Data.f90  IFE_Boundary.f90  IFE_Data.f90  IFE_INTERFACE.f90  IFE_Interface_cell_volume.f90  IFE_MAIN_PARAM.f90  IFE_RHS_PARAM.f90  IMPIC_Data_2D.f90  Object_2D.f90  Object_Data_2D.f90  PIC_MAIN_PARAM_2D.f90  Particle_2D.f90  Shape.f90  TimeControl.f90  Wall_2D.f90
PIC-IFE_GEC/code/Debug_zwz/: CheckTrail.f90  DiagMod.f90  Diagnosis.f90  LoadInject.f90  PART_INJECTION_DIST.f90
PIC-IFE_GEC/code/Function/: FUN_2D_One.f90  FUN_Density_Drhs_2D.f90  FUN_Density_rhs_2D.f90  FUN_Density_rhs_TRIANGLE_2D.f90  FUN_Random.f90  FUN_sphere_u_ErrAna.f90  Function_coefficient_2D.f90  NORM_2.f90  Userdef_EBC_Value.f90  Userdef_EBC_Value_bjw.f90
PIC-IFE_GEC/code/IFE-Rectangular/: AGAUS.f90  Boundary_Condition_info_2D.f90  Calculate_Cell_Volume_2D.f90  Cell_Volume_FE_2D.f90  Cell_Volume_IFE_2D.f90  Check_Sub_Nodes_2D.f90  Classify_Nodes_2D.f90  Cubic_Partition_2D.f90  Cubic_Partition_Cell_Volume_2D.f90  Diagonal_Preconditioner.f90  Edge_in_Boundary_2D.f90  El_Curve_Intersection_info_2D_BL.f90  El_Object_Intersection_info_2D_BL.f90  FE_Interpol_HW_2D.f90  FE_Mass.f90  FE_RHS_Eval_2D.f90  FE_RHS_HW_2D.f90  FE_Stiff_Eval_2D.f90  FE_Stiff_HW_2D.f90  Gauss_Nodes_2D.f90  GetFlux.f90  (+61 more)
(+2707 files in other folders)
